tests/ui/reachable/expr_unary.stderr
error[E0614]: type `!` cannot be dereferenced
  --> $DIR/expr_unary.rs:8:16
   |
LL |     let x: ! = * { return; };
   |                ^^^^^^^^^^^^^ can't be dereferenced

error: unreachable expression
  --> $DIR/expr_unary.rs:8:16
   |
LL |     let x: ! = * { return; };
   |                ^^^^------^^^
   |                |   |
   |                |   any code following this expression is unreachable
   |                unreachable expression
   |
note: the lint level is defined here
  --> $DIR/expr_unary.rs:5:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0614`.
